Fix spacing

--- a/static/theme-flex/style.css
+++ b/static/theme-flex/style.css
@@ -158,11 +158,11 @@ article > aside {
           flex: 1;
           order: 2;
           padding: .4rem 0rem;
-          text-decoration: none;
-          line-height: 1.2rem }
+          line-height: 1.2rem;
+          text-decoration: none; }
           article > aside .menu .dd-item div a:hover, article > aside .menu .dd-item div a:focus, article > aside .menu .dd-item div a:active {
             background-color: #f2f2f2;
-            border-radius: .2rem;
+            border-radius: .2rem; }
         article > aside .menu .dd-item div i.category-icon:active,
         article > aside .menu .dd-item div i.category-icon:focus,
         article > aside .menu .dd-item div i.category-icon:hover {
